<!--
  ~ Direct Call Widget - The widget that makes contacts accessible
  ~ Copyright (C) 2024 Fer P. A.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>

    <string name="app_name">Direct Call Widget</string>

    <!-- General purpose strings -->
    <string name="ok">OK</string>
    <string name="discard">Discard</string>
    <string name="loading">Loading&#8230;</string>

    <!-- Widget configuration -->
    <string name="activity_config_title">Configure widget</string>
    <string name="display_name_hint">Display name</string>
    <string name="picture_from_camera">Take a photo</string>
    <string name="picture_from_gallery">Pick an image from the gallery</string>
    <string-array name="change_picture_options">
        <item>@string/picture_from_camera</item>
        <item>@string/picture_from_gallery</item>
    </string-array>
    <string name="error_using_camera">Oops! The camera cannot be used at this moment.</string>
    <string name="phone_name_home">Home</string>
    <string name="phone_name_mobile">Mobile</string>
    <string name="phone_name_work">Work</string>
    <string name="phone_name_other">Phone</string>
    <string name="choose_contact">Choose contact</string>
    <string name="multicontact_widget_description">Multicontact</string>

    <!-- Settings -->
    <string name="pref_cat_settings">Settings</string>
    <string name="pref_onTap">Widget action</string>
    <string name="pref_onTap_key" translatable="false">pref_onTap</string>
    <string name="pref_onTap_entry_dial">Dial the number</string>
    <string name="pref_onTap_entry_call">Call the contact</string>
    <string name="pref_onTap_value_dial">"0"</string>
    <string name="pref_onTap_value_call">"1"</string>
    <string name="pref_onTap_default">@string/pref_onTap_value_call</string>
    <string name="pref_cat_about">About the app</string>
    <string name="pref_become_btester_key" translatable="false">pref_btester</string>
    <string name="pref_become_btester_title">Join the beta program</string>
    <string name="pref_become_btester_summary">Want to receive updates before anybody else? Become a beta tester!</string>
    <string name="pref_contribute_title_key" translatable="false">pref_contribute</string>
    <string name="pref_contribute_title">Contribute</string>
    <string name="pref_contribute_summary">This project is open source. Would you like to contribute or just take a look at the code?</string>

    <!-- Permissions -->
    <string name="request_readContacts_permission_explanation">Direct Call Widget needs permission for showing you your contacts.</string>
    <string name="request_call_permission_explanation">Direct Call Widget needs permission for calling this contact.</string>
    <string name="request_external_storage_explanation">Direct Call Widget needs permission to show you your pictures.</string>
    <string name="change_picture">Change picture</string>
    <string name="phone">Phone</string>

    <!--Multicontact widget -->
    <string name="title_activity_multi_contact_widget_config">New Multicontact widget</string>
    <string name="add_contact">Add contact</string>
    <string name="add_picture">Add picture</string>
    <string name="save">Save</string>
    <string name="search_contact">Search in contact list</string>

</resources>