<?xml version="1.0" encoding="utf-8"?><!--
  ~ Direct Call Widget - The widget that makes contacts accessible
  ~ Copyright (C) 2020 Fer P. A.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <PreferenceCategory android:title="@string/pref_cat_settings">
        <androidx.preference.ListPreference
            android:defaultValue="@string/pref_onTap_default"
            android:dialogTitle="@string/pref_onTap"
            android:entries="@array/pref_onTap_entries"
            android:entryValues="@array/pref_onTap_values"
            android:icon="@drawable/ic_widget_call"
            android:key="@string/pref_onTap_key"
            android:summary="@string/pref_onTap_value_call"
            android:title="@string/pref_onTap"
            tools:summary="@string/pref_onTap_entry_call" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_about">
        <Preference
            android:icon="@drawable/ic_support"
            android:key="@string/pref_support_key"
            android:summary="@string/pref_support_summary"
            android:title="@string/pref_support_title" />
        <Preference
            android:icon="@drawable/ic_beta"
            android:key="@string/pref_become_btester_key"
            android:summary="@string/pref_become_btester_summary"
            android:title="@string/pref_become_btester_title" />
        <Preference
            android:icon="@drawable/ic_code"
            android:key="@string/pref_contribute_title_key"
            android:summary="@string/pref_contribute_summary"
            android:title="@string/pref_contribute_title" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
